--- a/po/es.po
+++ b/po/es.po
@@ -11970,6 +11970,8 @@ msgid ""
 "You should upgrade, as MySQL 5.1 has improved performance, and MySQL 5.5 "
 "even more so."
 msgstr ""
+"Debería de actualizar ya que MySQL 5.1 tiene mejor performance, y ésta es "
+"aún mejor en MySQL 5.5."
 
 #: po/advisory_rules.php:38 po/advisory_rules.php:43 po/advisory_rules.php:48
 #, fuzzy, php-format
