Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -12008,10 +12008,9 @@ msgid "You should upgrade, to a stable version of MySQL 5.5"
 msgstr "Debería actualizar a una versión estable de MySQL 5.5"
 
 #: po/advisory_rules.php:50 po/advisory_rules.php:55
-#, fuzzy
 #| msgid "Description"
 msgid "Distribution"
-msgstr "Descripción"
+msgstr "Distribución"
 
 #: po/advisory_rules.php:51
 msgid "Version is compiled from source, not a MySQL official binary."
