Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 21:21+0200\n"
+"PO-Revision-Date: 2011-08-16 21:22+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12022,6 +12022,10 @@ msgid ""
 "distribution. The MySQL manual only is accurate for official MySQL binaries, "
 "not any package distributions (such as RedHat, Debian/Ubuntu etc)."
 msgstr ""
+"Si no compiló de código fuente puede estar utilizando un paquete modificado "
+"por una distribución. El manual MySQL sólo es preciso para los ejecutables "
+"MySQL oficiales, no para los paquetes de las distribuciones (como RedHat, "
+"Debian/Ubuntu, etc.)."
 
 #: po/advisory_rules.php:53
 msgid "'source' found in version_comment"
