--- a/po/es.po
+++ b/po/es.po
@@ -12035,7 +12035,7 @@ msgstr ""
 
 #: po/advisory_rules.php:56
 msgid "The MySQL manual only is accurate for official MySQL binaries."
-msgstr ""
+msgstr "El manual MySQL sólo es preciso para los ejecutables MySQL oficiales."
 
 #: po/advisory_rules.php:57
 msgid "Percona documentation is at http://www.percona.com/docs/wiki/"
