Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 21:25+0200\n"
+"PO-Revision-Date: 2011-08-16 21:27+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12046,6 +12046,7 @@ msgstr ""
 #: po/advisory_rules.php:58
 msgid "'percona' found in version_comment"
 msgstr ""
+"se encontró 'percona' en el comentario de la versión («version_comment»)"
 
 #: po/advisory_rules.php:60
 #, fuzzy
