Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 21:27+0200\n"
+"PO-Revision-Date: 2011-08-16 21:29+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12063,6 +12063,10 @@ msgid ""
 "so MySQL might not be able to access all of your memory. You might want to "
 "consider installing the 64-bit version of MySQL."
 msgstr ""
+"Tiene uan capacidad de memoria por sobre 3 GiB (asumiendo que el servidor "
+"MySQL está en el mismo equipo que el servidor phpMyAdmin), es posible que "
+"MySQL no pueda acceder a toda la memoria. Podría llegar a desear instalar la "
+"versión de 64-bits de MySQL."
 
 #: po/advisory_rules.php:63
 #, php-format
