Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 21:32+0200\n"
+"PO-Revision-Date: 2011-08-16 21:33+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12112,6 +12112,11 @@ msgid ""
 "refman/5.1/en/ha-memcached.html\\\">memcached</a> instead of the MySQL Query "
 "cache, especially if you have multiple slaves."
 msgstr ""
+"Está utilizando el caché de consultas MySQL en una base de datos de bastante "
+"tráfico. Probablemente quiera considerar utilizar <a "
+"href=\\\"http://dev.mysql.com/doc/refman/5.1/en/ha-"
+"memcached.html\\\">memcached</a> en lugar del caché de consultas de MySQL, "
+"especialmente si tiene muchos esclavos."
 
 #: po/advisory_rules.php:73
 #, php-format
