--- a/po/es.po
+++ b/po/es.po
@@ -12170,6 +12170,8 @@ msgid ""
 "The current ratio of free query cache memory to total query cache size is %s"
 "%%. It should be above 80%%"
 msgstr ""
+"La tasa actual de memoria libre del caché de consultas respecto del tamaño "
+"total es %s%%. Debería de ser mayor al 80%%"
 
 #: po/advisory_rules.php:85
 #, fuzzy
