--- a/po/es.po
+++ b/po/es.po
@@ -12171,7 +12171,7 @@ msgid ""
 "%%. It should be above 80%%"
 msgstr ""
 "La tasa actual de memoria libre del caché de consultas respecto del tamaño "
-"total es %s%%. Debería de ser mayor al 80%%"
+"total es %s%%. Debería ser mayor al 80%%"
 
 #: po/advisory_rules.php:85
 #| msgid "Query cache"
