Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 21:40+0200\n"
+"PO-Revision-Date: 2011-08-16 21:44+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12193,6 +12193,16 @@ msgid ""
 "using this formula: (query_cache_size - qcache_free_memory) / "
 "qcache_queries_in_cache"
 msgstr ""
+"Alta fragmentación probablemente aumente (más) «Qcache_lowmem_prunes». Esto "
+"puede ser causado por la cantidad de reducciones realizadas al caché de "
+"consultas por falta de memoria debido a que «query_cache_size» es muy "
+"pequeño. Una solución inmediata pero a corto plazo debería de vaciar el "
+"caché de consultas (puede bloquear el caché de consultas por un largo "
+"tiempo). Ajustar cuidadosamente «query_cache_min_res_unit» a un valor menor "
+"podría ayudar también; por ejemplo, podría definirlo como el tamaño promedio "
+"de las consultas en el caché utilizando la siguiente fórmula: "
+"(«query_cache_size» - «qcache_free_memory») / «qcache_queries_in_cache» "
+"((tamaño_caché - memoria_libre_caché) / cantidad_consultas_en_caché)."
 
 #: po/advisory_rules.php:88
 #, php-format
