Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 21:44+0200\n"
+"PO-Revision-Date: 2011-08-16 21:46+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12211,6 +12211,9 @@ msgid ""
 "that the query cache is an alternating pattern of free and used blocks. This "
 "value should be below 20%%."
 msgstr ""
+"El caché está  %s%% fragmentado actualmente. Una fragmentación del 100% "
+"significa que el caché de consulta es un patrón alternante de bloques "
+"utilizados y libres. Este valor debería ser menor al 20%%."
 
 #: po/advisory_rules.php:90
 msgid "Query cache low memory prunes"
