Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 21:51+0200\n"
+"PO-Revision-Date: 2011-08-16 21:53+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1392,7 +1392,6 @@ msgid "Analysing & loading logs. This may take a while."
 msgstr "Analiziranje in nalaganje dnevnikov. To lahko traja nekaj časa."
 
 #: js/messages.php:165
-#, fuzzy
 #| msgid ""
 #| "This columns shows the amount of identical queries that are grouped "
 #| "together. However only the SQL Text is being compared, thus the queries "
@@ -1402,9 +1401,9 @@ msgid ""
 "However only the SQL query itself has been used as a grouping criteria, so "
 "the other attributes of queries, such as start time, may differ."
 msgstr ""
-"Stolpec prikazuje število identičnih poizvedb, ki so zbrane skupaj. "
-"Primerjano je samo besedilo SQL, zato se lahko drugi atributi poizvedb, npr. "
-"začetni čas, razlikujejo."
+"Stolpec prikazuje število identičnih poizvedb, ki so zbrane skupaj. Kot "
+"zbirni pogoj je bila uporabljena le sama poizvedba SQL, zato se lahko drugi "
+"atributi poizvedb, npr. začetni čas, razlikujejo."
 
 #: js/messages.php:166
 msgid ""
