Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -1480,6 +1480,8 @@ msgstr "Spremenjene vrstice:"
 #: js/messages.php:188
 msgid "Failed parsing config file. It doesn't seem to be valid JSON code"
 msgstr ""
+"Razčlenjevalne konfiguracijske datoteke je spodletelo. Kot kaže, ni veljavna "
+"koda JSON."
 
 #: js/messages.php:189
 msgid ""
