Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -1679,7 +1679,7 @@ msgstr "Iskanje"
 
 #: js/messages.php:264
 msgid "Each point represents a data row."
-msgstr ""
+msgstr "Vsaka točka predstavlja podatkovno vrstico."
 
 #: js/messages.php:266
 msgid "Hovering over a point will show its label."
