--- a/po/sl.po
+++ b/po/sl.po
@@ -1691,7 +1691,8 @@ msgstr ""
 
 #: js/messages.php:270
 msgid "Click reset zoom link to come back to original state."
-msgstr "Kliknite ponastavi povečavo za vrnitev na prvotno stanje."
+msgstr ""
+"Kliknite povezavo za ponastavitev povečave za vrnitev na prvotno stanje."
 
 #: js/messages.php:272
 msgid "Click a data point to view and possibly edit the data row."
