Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -1708,10 +1708,9 @@ msgid "Strings are converted into integer for plotting"
 msgstr ""
 
 #: js/messages.php:278
-#, fuzzy
 #| msgid "Add/Delete columns"
 msgid "Select two columns"
-msgstr "Dodaj/Odstrani stolpce"
+msgstr "Izberite dva stolpca"
 
 #: js/messages.php:279
 msgid "Select two different columns"
