Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -7929,10 +7929,9 @@ msgid "Operator"
 msgstr "Operator"
 
 #: libraries/tbl_select.lib.php:131
-#, fuzzy
 #| msgid "Search"
 msgid "Table Search"
-msgstr "Iskanje"
+msgstr "Iskanje po tabeli"
 
 #: libraries/transformations/application_octetstream__download.inc.php:10
 msgid ""
