--- a/po/sl.po
+++ b/po/sl.po
@@ -11657,10 +11657,9 @@ msgid "The uptime is only %s"
 msgstr "Neprekinjeno delovanje je samo %s"
 
 #: po/advisory_rules.php:10
-#, fuzzy
 #| msgid "Questions"
 msgid "Questions below 1,000"
-msgstr "Vprašanja"
+msgstr "Vprašanja pod 1.000"
 
 #: po/advisory_rules.php:11
 msgid ""
