--- a/po/sl.po
+++ b/po/sl.po
@@ -11718,10 +11718,9 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:25
-#, fuzzy
 #| msgid "SQL queries"
 msgid "Long query time"
-msgstr "Poizvedbe SQL"
+msgstr "Čas dolgih poizvedb"
 
 #: po/advisory_rules.php:26
 msgid ""
