Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:08+0200\n"
+"PO-Revision-Date: 2011-08-16 22:09+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -10207,7 +10207,6 @@ msgid "Monitor Instructions"
 msgstr "Navodila nadziranja"
 
 #: server_status.php:1489
-#, fuzzy
 #| msgid ""
 #| "The phpMyAdmin Monitor can assist you in optimizing the server "
 #| "configuration and track down time intensive\n"
@@ -10224,11 +10223,10 @@ msgid ""
 "increases server load by up to 15%"
 msgstr ""
 "Nadziranje phpMyAdmin vam lahko pomaga pri optimiziranju konfiguracije "
-"strežnika in izsleditvi časovno zahtevnih\n"
-"        poizvedb. Za slednje morate nastaviti log_output na 'TABLE' in imeti "
-"ali slow_query_log ali general_log omogočeno. Vendar pomnite, da\n"
-"        general_log ustvari ogromno podatkov in poveča obremenitev strežnika "
-"do 15 %."
+"strežnika in izsleditvi časovno zahtevnih poizvedb. Za slednje morate "
+"nastaviti log_output na 'TABLE' in imeti omogočeno ali slow_query_log ali "
+"general_log. Vendar pomnite, da general_log ustvari ogromno podatkov in "
+"poveča obremenitev strežnika do 15 %."
 
 #: server_status.php:1494
 msgid ""
