--- a/po/sl.po
+++ b/po/sl.po
@@ -10242,7 +10242,6 @@ msgid "Using the monitor:"
 msgstr "Uporaba monitorja:"
 
 #: server_status.php:1509
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/>\n"
 #| "        Ok, you are good to go! Once you click 'Start monitor' your "
@@ -10261,18 +10260,11 @@ msgid ""
 "change the refresh rate under 'Settings', or remove any chart using the cog "
 "icon on each respective chart."
 msgstr ""
-"<b>Uporaba nadziranja:</b><br/>\n"
-"        V redu, pripravljeni ste! Ko kliknete 'Začni nadziranje', se bo vaš "
-"brskalnik osvežil in prikazal grafikone\n"
-"        v rednih razmikih. Dodajate lahko grafikone in spremenite pogostost "
-"osveževanja pod 'Nastavitve' ali pa\n"
-"        odstranite kateri koli grafikon s klikom na ikono zobnika ob "
-"ustreznem grafikonu.\n"
-"        <p>Ko opazite nenavadno povečanje dejavnosti, izberite ustrezno "
-"časovno obdobje na katerem koli grafikonu tako, da pridržite\n"
-"        levi miškin gumb in kazalec povlečete čez grafikon. To bo naložilo "
-"statistike iz dnevnikov, kar vam bo pomagalo odkriti vzrok\n"
-"        povečane dejavnosti.</p>"
+"V redu, pripravljeni ste! Ko kliknete 'Začni nadziranje', se bo vaš "
+"brskalnik osvežil in prikazal grafikone v rednih razmikih. Dodajate lahko "
+"grafikone in spremenite pogostost osveževanja pod 'Nastavitve' ali pa "
+"odstranite kateri koli grafikon s klikom na ikono zobnika ob ustreznem "
+"grafikonu."
 
 #: server_status.php:1511
 #, fuzzy
