Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-15 10:09+0200\n"
-"PO-Revision-Date: 2011-08-16 22:09+0200\n"
+"PO-Revision-Date: 2011-08-16 22:10+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -10304,7 +10304,6 @@ msgid "Please note:"
 msgstr "Prosimo, pomnite:"
 
 #: server_status.php:1520
-#, fuzzy
 #| msgid ""
 #| "<b>Please note:</b>\n"
 #| "        Enabling the general_log may increase the server load by 5-15%. "
@@ -10319,13 +10318,11 @@ msgid ""
 "it is advisable to select only a small time span and to disable the "
 "general_log and empty its table once monitoring is not required any more."
 msgstr ""
-"<b>Pomnite:</b>\n"
-"        Omogočitev general_log lahko poveča obremenitev strežnika za 5–15 %. "
-"Zavedajte se tudi, da je ustvarjanje statistik iz dnevnikov\n"
-"        zelo obremenjujoče opravilo, zato je priporočljivo, da izberete samo "
-"majhen časovni razpon ter onemogočite general_log in počistite njene tabele, "
-"ko nadziranja ne potrebujete več.\n"
-"        "
+"Omogočitev general_log lahko poveča obremenitev strežnika za 5–15 %. "
+"Zavedajte se tudi, da je ustvarjanje statistik iz dnevnikov zelo "
+"obremenjujoče opravilo, zato je priporočljivo, da izberete samo majhen "
+"časovni razpon ter onemogočite general_log in počistite njene tabele, ko "
+"nadziranja ne potrebujete več.        "
 
 #: server_status.php:1533
 #| msgid "Remove chart"
