--- a/po/sl.po
+++ b/po/sl.po
@@ -11552,10 +11552,10 @@ msgid "Create version"
 msgstr "Ustvari različico"
 
 #: tbl_zoom_select.php:140
-#, fuzzy
 #| msgid "Do a \"query by example\" (wildcard: \"%\")"
 msgid "Do a \"query by example\" (wildcard: \"%\") for two different columns"
-msgstr "Izvedi \"query by example\" (nadomestni znak: \"%\")"
+msgstr ""
+"Izvedi \"query by example\" (nadomestni znak: \"%\") za dva različna stolpca"
 
 #: tbl_zoom_select.php:151
 #, fuzzy
